<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingBottom="10dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="5dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pageButtons">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tankList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:nestedScrollingEnabled="false"/>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pageButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/prevButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrowleft"
            android:contentDescription="@string/previous_page_description"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pageNumber"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_number_format"
            android:textSize="15sp"

            app:layout_constraintStart_toEndOf="@id/prevButton"
            app:layout_constraintEnd_toStartOf="@id/nextButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/nextButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrowright"
            android:contentDescription="@string/next_page_description"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"

            app:layout_constraintStart_toEndOf="@id/pageNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>